TALCD-54: Fixed the Investors menu issue on mobile.

--- a/docroot/themes/custom/tateandlyle/sass/components/_homepage-banner.scss
+++ b/docroot/themes/custom/tateandlyle/sass/components/_homepage-banner.scss
@@ -268,13 +268,15 @@
 }
 
 .no__icon--banner {
-
   .tal__banner--content {
     @media (min-width: $screen-sm) {
       padding: 34px 39px 25px 37px;
     }
     @media (min-width: $screen-md) {
       padding: 40px 51px 20px 51px;
+    }
+    .dropdown-menu {
+      z-index: 996;
     }
   }
 
